added comments, added high score page, added saving of high scores

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Javascript Quiz Game</title>
 
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="Develop/reset.css">
+<link rel="stylesheet" href="Develop/style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
   </section>
 </section>
     
-<script src="develop/script.js"></script>
+<script src="Develop/script.js"></script>
 
 </body>
 
